force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Friday_Interpretation_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Friday_Interpretation_Type__c</fullName>
    <description>Defines the type of interpretation that will be used when processing Friday Timesheet Entries during transaction creation</description>
    <inlineHelpText>Defines the type of interpretation that will be used when processing Friday Timesheet Entries during transaction creation</inlineHelpText>
    <label>Friday Interpretation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Interpretation_Type_Picklists</valueSetName>
    </valueSet>
</CustomField>