force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Friday_Standard_Hours__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Friday_Standard_Hours__c</fullName>
    <description>Defines the daily or shift standard hours expected to be worked on Fridays</description>
    <inlineHelpText>Defines the daily or shift standard hours expected to be worked on Fridays</inlineHelpText>
    <label>Friday Standard Hours</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>