force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Has_Saturday_Rule__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Has_Saturday_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if the Interpretation Rule has any related Interpretation Breakpoints with a Type of Saturday</description>
    <inlineHelpText>Identifies if the Interpretation Rule has any related Interpretation Breakpoints with a Type of Saturday</inlineHelpText>
    <label>Has Saturday Rule</label>
    <type>Checkbox</type>
</CustomField>