force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Higher_Rate_Monday__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Higher_Rate_Monday__c</fullName>
    <description>Users will be able to define that this day is the higher rate for overnight majority where the split is 50%. The picklist with the largest number will be selected when assessing the higher rate</description>
    <inlineHelpText>Users will be able to define that this day is the higher rate for overnight majority where the split is 50%. The picklist with the largest number will be selected when assessing the higher rate</inlineHelpText>
    <label>Higher Rate  Monday</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Interpretation_Higher_Rate_Picklists</valueSetName>
    </valueSet>
</CustomField>