force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Include_Break_Overtime_In_Overtime__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Include_Break_Overtime_In_Overtime__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if Break Loading hours Breakpoints will be treated as Overtime while assessing Frequency Breakpoints</description>
    <inlineHelpText>Defines if Break Loading hours Breakpoints will be treated as Overtime while assessing Frequency Breakpoints</inlineHelpText>
    <label>Include Break Loading In Overtime</label>
    <type>Checkbox</type>
</CustomField>