force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Include_Minimum_Rest_in_Daily_OT_Hours__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Include_Minimum_Rest_in_Daily_OT_Hours__c</fullName>
    <description>Indicates if the minimum rest hrs should be included in the Daily Overtime calculations</description>
    <inlineHelpText>Indicates if the minimum rest hrs should be included in the Daily Overtime calculations</inlineHelpText>
    <label>Include Minimum Rest in Daily OT Hours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>