force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Include_Paid_Breaks_in_Break_Loading__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Include_Paid_Breaks_in_Break_Loading__c</fullName>
    <description>To indicated if the Break Loading interpretation should include Paid Breaks when interpreting.</description>
    <inlineHelpText>To indicated if the Break Loading interpretation should include Paid Breaks when interpreting.</inlineHelpText>
    <label>Include Paid Breaks in Break Loading</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>