force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Include_Time_BPs_in_OT_Daily_Std_Calcs__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Include_Time_BPs_in_OT_Daily_Std_Calcs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Time Breakpoints in Overtime should be included in daily standard calculations.</description>
    <inlineHelpText>Indicates if Time Breakpoints in Overtime should be included in daily standard calculations.</inlineHelpText>
    <label>Include Time BPs in OT - Daily Std Calcs</label>
    <type>Checkbox</type>
</CustomField>