force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Include_Time_Breakpoints_In_Overtime__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Include_Time_Breakpoints_In_Overtime__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if Hours allocated to Time Breakpoints will be treated as Overtime while assessing Frequency Breakpoints</description>
    <inlineHelpText>Defines if Hours allocated to Time Breakpoints will be treated as Overtime while assessing Frequency Breakpoints</inlineHelpText>
    <label>Include Time BPs In OT - Freq Std Calcs</label>
    <type>Checkbox</type>
</CustomField>