force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Interpretation_Rule__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Interpretation_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the parent Interpretation Rule for an Interpretation Variation Rule</description>
    <inlineHelpText>Indicates the parent Interpretation Rule for an Interpretation Variation Rule</inlineHelpText>
    <label>Interpretation Rule</label>
    <referenceTo>tc9_et__Interpretation_Rule__c</referenceTo>
    <relationshipLabel>Interpretation Rules</relationshipLabel>
    <relationshipName>Interpretation_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>