force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Interpretation_Rule_Builder__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Interpretation_Rule_Builder__c</fullName>
    <description>Button to open the Interpretation Rule Builder</description>
    <formula>HYPERLINK(&quot;/lightning/cmp/tc9_et__AwardBuilder?c__recordId=&quot; + Id + &apos;&amp;c__recordTypeName=&apos; + RecordType.DeveloperName + &apos;&amp;c__recTypeId=&apos; +  RecordTypeId +
If(ISPICKVAL(tc9_et__Variation_Type__c, &quot;Assignment&quot;) ,
&apos;&amp;c__Assignment=&apos; + tc9_et__Assignment__c, (If(ISPICKVAL(tc9_et__Variation_Type__c, &quot;&quot;) ,
&apos;&apos;,&apos;&amp;c__variationIntType=&apos; + tc9_et__Variation_Record_Type__c))) , IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+
&quot;resource/tc9_pr__Payroll_resources/AUS_Payroll/Images/LaunchButton_Blue.png&quot;,&quot;Interpretation Rule Builder&quot;),&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Button to open the Interpretation Rule Builder</inlineHelpText>
    <label>Interpretation Rule Builder</label>
    <type>Text</type>
</CustomField>