force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Interpretation_Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Interpretation_Rule_Name__c</fullName>
    <description>Displays the Interpretation Rule Name as read only for use on Lightning Pages</description>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the Interpretation Rule Name as read only for use on Lightning Pages</inlineHelpText>
    <label>Interpretation Rule Name</label>
    <type>Text</type>
</CustomField>