force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Interpretation_Rule_Template_Group__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Interpretation_Rule_Template_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the Template Group that the Interpretation Rule will apply.</description>
    <inlineHelpText>Defines the Template Group that the Interpretation Rule will apply.</inlineHelpText>
    <label>Interpretation Rule Template Group</label>
    <referenceTo>tc9_pr__Template_Group__c</referenceTo>
    <relationshipLabel>Interpretation Rules</relationshipLabel>
    <relationshipName>Interpretation_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>