force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Is_Standard_Time_for_Sunday_Required__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Is_Standard_Time_for_Sunday_Required__c</fullName>
    <description>Defines if Standard Times will apply for Sundays. If no, Time Breakpoints will not apply and only Hourly, Shift End Time and Shift Start Time breakpoints will be used where applicable.</description>
    <inlineHelpText>Defines if Standard Times will apply for Sundays. If no, Time Breakpoints will not apply and only Hourly, Shift End Time and Shift Start Time breakpoints will be used where applicable.</inlineHelpText>
    <label>Is Standard Time for Sunday Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>