force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Last_Rate_Calc_Update_Required__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Last_Rate_Calc_Update_Required__c</fullName>
    <label>Last Rate Calc Update Required</label>
    <type>DateTime</type>
</CustomField>