force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Long_Description__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Long_Description__c</fullName>
    <description>Long description outlining the awards purpose</description>
    <inlineHelpText>Long description outlining the awards purpose</inlineHelpText>
    <label>Long Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>