force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Minimum_Frequency_Paid_Hours__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Minimum_Frequency_Paid_Hours__c</fullName>
    <description>Defines the minimum hours to be considered for a Timesheet period (as determined by the Timesheet Frequency)</description>
    <inlineHelpText>Defines the minimum hours to be considered for a Timesheet period (as determined by the Timesheet Frequency)</inlineHelpText>
    <label>Minimum &apos;Frequency&apos; Paid Hours</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>