force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Minimum_Hours_Based_On__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Minimum_Hours_Based_On__c</fullName>
    <description>Indicates if the minimum hours is based on shift start or end time. This will only apply to shift based breakpoints.</description>
    <inlineHelpText>Indicates if the minimum hours is based on shift start or end time. This will only apply to shift based breakpoints.</inlineHelpText>
    <label>Minimum Hours Based On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Interpretation_Minimum_Hours_Type</valueSetName>
    </valueSet>
</CustomField>