force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Minimum_OT_Round_Up_Shift_Paid_Hours__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Minimum_OT_Round_Up_Shift_Paid_Hours__c</fullName>
    <description>To hold the minimum paid hours for Overtime Round Up Shifts.</description>
    <inlineHelpText>To hold the minimum paid hours for Overtime Round Up Shifts.</inlineHelpText>
    <label>Minimum OT Round Up Shift Paid Hours</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>