force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Minimum_Pay_Rate_Group__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Minimum_Pay_Rate_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Allows users to select the Template Group of Minimum Pay Rates applicable to this Interpretation Rule.</description>
    <inlineHelpText>Allows users to select the Template Group of Minimum Pay Rates applicable to this Interpretation Rule.</inlineHelpText>
    <label>Minimum Pay Rate Group</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>tc9_pr__Template_Group__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Rate Calculator Template</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>tc9_pr__Template_Group__c</referenceTo>
    <relationshipLabel>Interpretation Rules (Minimum Pay Rate Group)</relationshipLabel>
    <relationshipName>Interpretation_Rules1</relationshipName>
    <type>Lookup</type>
</CustomField>