force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Minimum_Rest_Hours__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Minimum_Rest_Hours__c</fullName>
    <description>The hours for minimum rest between the start time of a day to the end time of the previous day.</description>
    <inlineHelpText>The hours for minimum rest between the start time of a day to the end time of the previous day.</inlineHelpText>
    <label>Minimum Rest Hours</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>