force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Minimum_Tuesday_Paid_Hours__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Minimum_Tuesday_Paid_Hours__c</fullName>
    <description>The minimum hours to be considered if work was performed on Tuesdays</description>
    <inlineHelpText>The minimum hours to be considered if work was performed on Tuesdays</inlineHelpText>
    <label>Minimum Tuesday Paid Hours</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>