force-app/main/default/objects/tc9_et__Interpretation_Rule__c/fields/tc9_et__Minimum_Wednesday_Paid_Hours__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Minimum_Wednesday_Paid_Hours__c</fullName>
    <description>The minimum hours to be considered if work was performed on Wednesdays</description>
    <inlineHelpText>The minimum hours to be considered if work was performed on Wednesdays</inlineHelpText>
    <label>Minimum Wednesday Paid Hours</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>